--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,6 +29,7 @@ Depends:
     SingleCellExperiment,
     basejump (>= 0.6.3)
 Imports:
+    bcbioSingleCell,
     DESeq2,
     edgeR,
     reticulate,
