Update NAMESPACE for Seurat methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -187,6 +187,7 @@ importFrom(assertive.types,assert_is_tbl_df)
 importFrom(assertive.types,is_a_string)
 importFrom(assertive.types,is_character)
 importFrom(basejump,"interestingGroups<-")
+importFrom(basejump,"sampleData<-")
 importFrom(basejump,.returnInterestingGroups)
 importFrom(basejump,assertFormalInterestingGroups)
 importFrom(basejump,assertHasRownames)
@@ -220,6 +221,7 @@ importFrom(basejump,markdownPlotlist)
 importFrom(basejump,printString)
 importFrom(basejump,readFileByExtension)
 importFrom(basejump,readYAML)
+importFrom(basejump,sampleData)
 importFrom(basejump,sampleNames)
 importFrom(basejump,sanitizeSampleData)
 importFrom(basejump,stripTranscriptVersions)
@@ -232,9 +234,11 @@ importFrom(bcbioBase,bcbio_geom_label)
 importFrom(bcbioBase,bcbio_geom_label_average)
 importFrom(bcbioBase,bcbio_geom_label_repel)
 importFrom(bcbioBase,flatFiles)
+importFrom(bcbioBase,metrics)
 importFrom(bcbioBase,minimalSampleData)
 importFrom(bcbioBase,plotDot)
 importFrom(bcbioBase,plotGene)
+importFrom(bcbioBase,plotQC)
 importFrom(bcbioBase,plotViolin)
 importFrom(bcbioBase,prepareSummarizedExperiment)
 importFrom(bcbioBase,readDataVersions)
@@ -246,6 +250,17 @@ importFrom(bcbioBase,readYAMLSampleData)
 importFrom(bcbioBase,sampleDirs)
 importFrom(bcbioSingleCell,barcodeRanksPerSample)
 importFrom(bcbioSingleCell,cell2sample)
+importFrom(bcbioSingleCell,metricsPerSample)
+importFrom(bcbioSingleCell,plotBarcodeRanks)
+importFrom(bcbioSingleCell,plotCellCounts)
+importFrom(bcbioSingleCell,plotGenesPerCell)
+importFrom(bcbioSingleCell,plotMitoRatio)
+importFrom(bcbioSingleCell,plotMitoVsCoding)
+importFrom(bcbioSingleCell,plotNovelty)
+importFrom(bcbioSingleCell,plotUMIsPerCell)
+importFrom(bcbioSingleCell,plotUMIsVsGenes)
+importFrom(bcbioSingleCell,plotZerosVsDepth)
+importFrom(bcbioSingleCell,topBarcodes)
 importFrom(cowplot,draw_plot)
 importFrom(cowplot,ggdraw)
 importFrom(cowplot,plot_grid)
