--- a/NAMESPACE
+++ b/NAMESPACE
@@ -239,6 +239,9 @@ importFrom(basejump,makeTx2geneFromGFF)
 importFrom(basejump,markdownHeader)
 importFrom(basejump,markdownPlotlist)
 importFrom(basejump,matchInterestingGroups)
+importFrom(basejump,metrics)
+importFrom(basejump,plotGene)
+importFrom(basejump,plotQC)
 importFrom(basejump,printString)
 importFrom(basejump,readFileByExtension)
 importFrom(basejump,readYAML)
@@ -250,25 +253,6 @@ importFrom(basejump,theme_midnight)
 importFrom(basejump,theme_paperwhite)
 importFrom(basejump,tx2geneFromGFF)
 importFrom(basejump,uniteInterestingGroups)
-importFrom(bcbioBase,bcbio_geom_abline)
-importFrom(bcbioBase,bcbio_geom_label)
-importFrom(bcbioBase,bcbio_geom_label_average)
-importFrom(bcbioBase,bcbio_geom_label_repel)
-importFrom(bcbioBase,flatFiles)
-importFrom(bcbioBase,metrics)
-importFrom(bcbioBase,minimalSampleData)
-importFrom(bcbioBase,plotDot)
-importFrom(bcbioBase,plotGene)
-importFrom(bcbioBase,plotQC)
-importFrom(bcbioBase,plotViolin)
-importFrom(bcbioBase,prepareSummarizedExperiment)
-importFrom(bcbioBase,readDataVersions)
-importFrom(bcbioBase,readLog)
-importFrom(bcbioBase,readProgramVersions)
-importFrom(bcbioBase,readSampleData)
-importFrom(bcbioBase,readTx2gene)
-importFrom(bcbioBase,readYAMLSampleData)
-importFrom(bcbioBase,sampleDirs)
 importFrom(bcbioSingleCell,barcodeRanksPerSample)
 importFrom(bcbioSingleCell,cell2sample)
 importFrom(bcbioSingleCell,metricsPerSample)
