--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -27,7 +27,7 @@ LazyData: TRUE
 Depends:
     R (>= 3.4),
     SingleCellExperiment,
-    basejump (>= 0.6.4)
+    basejump (>= 0.7)
 Imports:
     bcbioSingleCell (>= 0.2),
     DESeq2,
@@ -45,7 +45,7 @@ Suggests:
     zinbwave
 Remotes:
     hbc/bcbioSingleCell@develop,
-    steinbaugh/basejump
+    steinbaugh/basejump@develop
 biocViews:
     DataRepresentation,
     GeneExpression,
