--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -35,11 +35,26 @@ Imports:
     assertive.sets,
     assertive.types,
     bcbioSingleCell (>= 0.2),
+    Biobase,
+    BiocGenerics,
+    BiocParallel,
+    cowplot,
     DESeq2,
+    dplyr,
     edgeR,
     ggplot2,
-    reticulate,
-    Seurat (>= 2.3)
+    magrittr,
+    Matrix,
+    methods,
+    pbapply,
+    rlang,
+    S4Vectors,
+    scales,
+    Seurat (>= 2.3),
+    SummarizedExperiment,
+    tibble,
+    tidyr,
+    zinbwave
 Suggests:
     BiocStyle,
     googlesheets,
