--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,2 +1,11 @@
 ^.*\.Rproj$
+^.*\.gz$
+^\.Rprofile$
 ^\.Rproj\.user$
+^\.lintr$
+^\.travis\.yml$
+^_pkgdown\.yml$
+^appveyor\.yml$
+^data-raw$
+^docs$
+^pkgdown$
