--- a/NAMESPACE
+++ b/NAMESPACE
@@ -131,6 +131,7 @@ importFrom(basejump,assertIsAnImplicitInteger)
 importFrom(basejump,assertIsColorScaleContinuousOrNULL)
 importFrom(basejump,assertIsColorScaleDiscreteOrNULL)
 importFrom(basejump,assertIsGene2symbol)
+importFrom(basejump,assertIsImplicitInteger)
 importFrom(basejump,camel)
 importFrom(basejump,convertGenesToSymbols)
 importFrom(basejump,gene2symbol)
@@ -141,10 +142,10 @@ importFrom(basejump,metrics)
 importFrom(basejump,plotGene)
 importFrom(basejump,printString)
 importFrom(basejump,readFileByExtension)
-importFrom(basejump,sampleData)
 importFrom(basejump,sampleNames)
 importFrom(basejump,theme_midnight)
 importFrom(basejump,theme_paperwhite)
+importFrom(bcbioSingleCell,sampleData)
 importFrom(cowplot,plot_grid)
 importFrom(dplyr,arrange)
 importFrom(dplyr,desc)
