--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(topMarkers)
 exportMethods("colData<-")
 exportMethods("interestingGroups<-")
 exportMethods("metadata<-")
+exportMethods("sampleData<-")
 exportMethods(assay)
 exportMethods(assayNames)
 exportMethods(assays)
@@ -55,6 +56,7 @@ exportMethods(reducedDims)
 exportMethods(rowData)
 exportMethods(rowRanges)
 exportMethods(rownames)
+exportMethods(sampleData)
 exportMethods(sampleNames)
 importClassesFrom(Seurat,seurat)
 importClassesFrom(SingleCellExperiment,SingleCellExperiment)
@@ -115,6 +117,7 @@ importFrom(assertive.types,assert_is_numeric)
 importFrom(assertive.types,assert_is_tbl_df)
 importFrom(assertive.types,is_a_string)
 importFrom(basejump,"interestingGroups<-")
+importFrom(basejump,"sampleData<-")
 importFrom(basejump,assertHasRownames)
 importFrom(basejump,assertIsAHeaderLevel)
 importFrom(basejump,assertIsAStringOrNULL)
@@ -136,6 +139,7 @@ importFrom(basejump,readFileByExtension)
 importFrom(basejump,sampleNames)
 importFrom(basejump,theme_midnight)
 importFrom(basejump,theme_paperwhite)
+importFrom(bcbioSingleCell,sampleData)
 importFrom(cowplot,plot_grid)
 importFrom(dplyr,arrange)
 importFrom(dplyr,desc)
