--- a/.travis.yml
+++ b/.travis.yml
@@ -35,7 +35,7 @@ env:
 # r_check_args: "--no-vignettes"
 
 # Set true before submission to Bioconductor
-warnings_are_errors: true
+warnings_are_errors: false
 
 # Temporarily enable when caching Bioconductor packages
 # script: true
