--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(cellCountsPerCluster)
 export(cellTypesPerCluster)
 export(clusterCellCountsPerSample)
 export(diffExp)
+export(hasZinbwave)
 export(knownMarkersDetected)
 export(plotCellTypesPerCluster)
 export(plotDot)
@@ -18,6 +19,7 @@ export(plotTopMarkers)
 export(plotUMAP)
 export(plotViolin)
 export(readCellTypeMarkers)
+export(runZinbwave)
 export(sanitizeSeuratMarkers)
 export(topMarkers)
 exportMethods("colData<-")
@@ -139,6 +141,7 @@ importFrom(basejump,readFileByExtension)
 importFrom(basejump,sampleNames)
 importFrom(basejump,theme_midnight)
 importFrom(basejump,theme_paperwhite)
+importFrom(basejump,upperCamel)
 importFrom(bcbioSingleCell,sampleData)
 importFrom(cowplot,plot_grid)
 importFrom(dplyr,arrange)
