Improve internal `runZinbwave()` code and add additional information to inform the user about `zinbFit()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,7 +70,11 @@ importFrom(BiocGenerics,counts)
 importFrom(BiocGenerics,do.call)
 importFrom(BiocGenerics,plotPCA)
 importFrom(BiocGenerics,rownames)
+importFrom(BiocParallel,"bpprogressbar<-")
+importFrom(BiocParallel,MulticoreParam)
 importFrom(BiocParallel,SerialParam)
+importFrom(BiocParallel,bpparam)
+importFrom(BiocParallel,bpprogressbar)
 importFrom(DESeq2,DESeq)
 importFrom(DESeq2,DESeqDataSet)
 importFrom(DESeq2,results)
@@ -214,4 +218,5 @@ importFrom(utils,capture.output)
 importFrom(utils,globalVariables)
 importFrom(utils,packageVersion)
 importFrom(zinbwave,glmWeightedF)
+importFrom(zinbwave,zinbFit)
 importFrom(zinbwave,zinbwave)
