Enforce DESeq2 and edgeR dependencies in imports

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,9 +40,9 @@ Imports:
     BiocGenerics,
     BiocParallel,
     cowplot,
-    DESeq2,
+    DESeq2 (>= 1.20),
     dplyr,
-    edgeR,
+    edgeR (>= 3.22),
     ggplot2,
     magrittr,
     Matrix,
