--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,8 @@ export(cellCountsPerCluster)
 export(cellTypesPerCluster)
 export(clusterCellCountsPerSample)
 export(diffExp)
-export(hasZinbwave)
+export(findAllMarkers)
+export(ident)
 export(knownMarkersDetected)
 export(plotCellTypesPerCluster)
 export(plotDot)
@@ -38,6 +39,7 @@ exportMethods(convertGenesToSymbols)
 exportMethods(counts)
 exportMethods(diffExp)
 exportMethods(gene2symbol)
+exportMethods(ident)
 exportMethods(interestingGroups)
 exportMethods(metadata)
 exportMethods(metrics)
@@ -58,6 +60,7 @@ exportMethods(reducedDims)
 exportMethods(rowData)
 exportMethods(rowRanges)
 exportMethods(rownames)
+exportMethods(runZinbwave)
 exportMethods(sampleData)
 exportMethods(sampleNames)
 importClassesFrom(Seurat,seurat)
