Rename `findAllMarkers()` to simply `findMarkers()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,7 @@ export(cellCountsPerCluster)
 export(cellTypesPerCluster)
 export(clusterCellCountsPerSample)
 export(diffExp)
-export(findAllMarkers)
+export(findMarkers)
 export(ident)
 export(knownMarkersDetected)
 export(plotCellTypesPerCluster)
