Rename `ident()` to `clusterID()` generic, and export as an alias

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(cellCountsPerCluster)
 export(cellTypesPerCluster)
 export(clusterCellCountsPerSample)
+export(clusterID)
 export(diffExp)
 export(findMarkers)
 export(ident)
@@ -32,13 +33,13 @@ exportMethods(assayNames)
 exportMethods(assays)
 exportMethods(cellCountsPerCluster)
 exportMethods(clusterCellCountsPerSample)
+exportMethods(clusterID)
 exportMethods(colData)
 exportMethods(colnames)
 exportMethods(convertGenesToSymbols)
 exportMethods(counts)
 exportMethods(diffExp)
 exportMethods(gene2symbol)
-exportMethods(ident)
 exportMethods(interestingGroups)
 exportMethods(metadata)
 exportMethods(metrics)
