--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ exportMethods(colnames)
 exportMethods(convertGenesToSymbols)
 exportMethods(counts)
 exportMethods(diffExp)
+exportMethods(findMarkers)
 exportMethods(gene2symbol)
 exportMethods(interestingGroups)
 exportMethods(metadata)
