Export coercion methods properly

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ exportMethods(assays)
 exportMethods(cellCountsPerCluster)
 exportMethods(clusterCellCountsPerSample)
 exportMethods(clusterID)
+exportMethods(coerce)
 exportMethods(colData)
 exportMethods(colnames)
 exportMethods(convertGenesToSymbols)
