--- a/NAMESPACE
+++ b/NAMESPACE
@@ -196,8 +196,10 @@ importFrom(magrittr,"%>%")
 importFrom(magrittr,set_names)
 importFrom(methods,"slot<-")
 importFrom(methods,as)
+importFrom(methods,coerce)
 importFrom(methods,getMethod)
 importFrom(methods,is)
+importFrom(methods,setAs)
 importFrom(methods,show)
 importFrom(methods,slot)
 importFrom(methods,validObject)
