--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: pointillism
 Title: Single-Cell Clustering Visualization
 Description: Toolkit for single-cell RNA-seq clustering analysis.
 Version: 0.1.2
-Date: 2018-08-20
+Date: 2018-08-23
 Authors@R: c(
     person(
         given = "Michael",
@@ -20,8 +20,8 @@ Authors@R: c(
     ))
 URL:
     https://steinbaugh.com/pointillism,
-    https://github.com/steinbaugh.com/pointillism
-BugReports: https://github.com/steinbaugh.com/pointillism/issues
+    https://github.com/steinbaugh/pointillism
+BugReports: https://github.com/steinbaugh/pointillism/issues
 License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: TRUE
