Improve handling of stash into legacy "bcbio" list inside object@misc

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -122,6 +122,7 @@ importFrom(assertive.types,assert_is_any_of)
 importFrom(assertive.types,assert_is_character)
 importFrom(assertive.types,assert_is_data.frame)
 importFrom(assertive.types,assert_is_factor)
+importFrom(assertive.types,assert_is_list)
 importFrom(assertive.types,assert_is_matrix)
 importFrom(assertive.types,assert_is_numeric)
 importFrom(assertive.types,assert_is_tbl_df)
