--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(cellTypesPerCluster)
 export(clusterCellCountsPerSample)
 export(clusterID)
 export(diffExp)
+export(diffExpPerCluster)
 export(findMarkers)
 export(knownMarkersDetected)
 export(plotCellTypesPerCluster)
@@ -38,6 +39,7 @@ exportMethods(colData)
 exportMethods(colnames)
 exportMethods(counts)
 exportMethods(diffExp)
+exportMethods(diffExpPerCluster)
 exportMethods(findMarkers)
 exportMethods(gene2symbol)
 exportMethods(interestingGroups)
