Improve handling for multiple genes and multiple samples

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -169,6 +169,7 @@ importFrom(dplyr,select)
 importFrom(dplyr,slice)
 importFrom(dplyr,summarize)
 importFrom(dplyr,ungroup)
+importFrom(dplyr,vars)
 importFrom(edgeR,DGEList)
 importFrom(edgeR,calcNormFactors)
 importFrom(edgeR,estimateDisp)
@@ -176,6 +177,7 @@ importFrom(edgeR,glmFit)
 importFrom(ggplot2,aes)
 importFrom(ggplot2,element_rect)
 importFrom(ggplot2,expand_limits)
+importFrom(ggplot2,facet_grid)
 importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_hline)
 importFrom(ggplot2,geom_line)
