Improve internal code with additional assert checks in `findMarkers()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -108,6 +108,7 @@ importFrom(SummarizedExperiment,rowRanges)
 importFrom(assertive.base,assert_are_identical)
 importFrom(assertive.numbers,assert_all_are_in_left_open_range)
 importFrom(assertive.numbers,assert_all_are_positive)
+importFrom(assertive.properties,assert_has_names)
 importFrom(assertive.properties,assert_has_no_duplicates)
 importFrom(assertive.properties,assert_has_rows)
 importFrom(assertive.properties,assert_is_non_empty)
