--- a/NAMESPACE
+++ b/NAMESPACE
@@ -105,6 +105,7 @@ importFrom(SummarizedExperiment,assays)
 importFrom(SummarizedExperiment,colData)
 importFrom(SummarizedExperiment,rowData)
 importFrom(SummarizedExperiment,rowRanges)
+importFrom(assertive.base,assert_all_are_not_na)
 importFrom(assertive.base,assert_are_identical)
 importFrom(assertive.numbers,assert_all_are_in_left_open_range)
 importFrom(assertive.numbers,assert_all_are_positive)
