--- a/NAMESPACE
+++ b/NAMESPACE
@@ -141,6 +141,7 @@ importFrom(basejump,assertIsColorScaleDiscreteOrNULL)
 importFrom(basejump,assertIsGene2symbol)
 importFrom(basejump,assertIsImplicitInteger)
 importFrom(basejump,camel)
+importFrom(basejump,coerce)
 importFrom(basejump,convertGenesToSymbols)
 importFrom(basejump,gene2symbol)
 importFrom(basejump,interestingGroups)
@@ -218,10 +219,7 @@ importFrom(scales,pretty_breaks)
 importFrom(stats,median)
 importFrom(stats,model.matrix)
 importFrom(stats,relevel)
-importFrom(tibble,as_tibble)
-importFrom(tibble,column_to_rownames)
 importFrom(tibble,remove_rownames)
-importFrom(tibble,rownames_to_column)
 importFrom(tibble,tibble)
 importFrom(tidyr,gather)
 importFrom(utils,capture.output)
