--- a/NAMESPACE
+++ b/NAMESPACE
@@ -137,6 +137,7 @@ importFrom(basejump,assertIsAStringOrNULL)
 importFrom(basejump,assertIsAnImplicitInteger)
 importFrom(basejump,assertIsColorScaleContinuousOrNULL)
 importFrom(basejump,assertIsColorScaleDiscreteOrNULL)
+importFrom(basejump,assertIsFillScaleDiscreteOrNULL)
 importFrom(basejump,assertIsGene2symbol)
 importFrom(basejump,assertIsImplicitInteger)
 importFrom(basejump,camel)
