--- a/NAMESPACE
+++ b/NAMESPACE
@@ -183,6 +183,7 @@ importFrom(ggplot2,expand_limits)
 importFrom(ggplot2,facet_grid)
 importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_hline)
+importFrom(ggplot2,geom_jitter)
 importFrom(ggplot2,geom_line)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,geom_text)
