Migrate `mapGenes` code to basejump, since it is generally applicable to `SummarizedExperiment`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -145,6 +145,8 @@ importFrom(basejump,coerce)
 importFrom(basejump,convertGenesToSymbols)
 importFrom(basejump,gene2symbol)
 importFrom(basejump,interestingGroups)
+importFrom(basejump,mapGenesToRownames)
+importFrom(basejump,mapGenesToSymbols)
 importFrom(basejump,markdownHeader)
 importFrom(basejump,matchInterestingGroups)
 importFrom(basejump,metrics)
