--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: pointillism
 Title: Single-Cell Clustering Visualization
 Description: Toolkit for single-cell RNA-seq clustering analysis.
 Version: 0.1.3
-Date: 2018-08-28
+Date: 2018-09-16
 Authors@R: c(
     person(
         given = "Michael",
@@ -28,14 +28,14 @@ LazyData: TRUE
 Depends:
     R (>= 3.5),
     SingleCellExperiment,
-    bcbioSingleCell (>= 0.2.2)
+    basejump (>= 0.99.0),
+    bcbioSingleCell (>= 0.99.0)
 Imports:
     assertive.base,
     assertive.numbers,
     assertive.properties,
     assertive.sets,
     assertive.types,
-    basejump (>= 0.7.3),
     BiocGenerics,
     BiocParallel,
     cowplot,
@@ -63,7 +63,7 @@ Suggests:
     testthat (>= 2.0)
 Remotes:
     hbc/bcbioSingleCell@develop,
-    steinbaugh/basejump@develop
+    steinbaugh/basejump@bioconductor
 biocViews:
     DataRepresentation,
     GeneExpression,
