--- a/NAMESPACE
+++ b/NAMESPACE
@@ -138,12 +138,12 @@ importFrom(basejump,assertIsAnImplicitInteger)
 importFrom(basejump,assertIsColorScaleContinuousOrNULL)
 importFrom(basejump,assertIsColorScaleDiscreteOrNULL)
 importFrom(basejump,assertIsFillScaleDiscreteOrNULL)
-importFrom(basejump,assertIsGene2symbol)
 importFrom(basejump,assertIsImplicitInteger)
 importFrom(basejump,camel)
 importFrom(basejump,coerce)
 importFrom(basejump,convertGenesToSymbols)
 importFrom(basejump,gene2symbol)
+importFrom(basejump,import)
 importFrom(basejump,interestingGroups)
 importFrom(basejump,mapGenesToRownames)
 importFrom(basejump,mapGenesToSymbols)
@@ -152,7 +152,6 @@ importFrom(basejump,matchInterestingGroups)
 importFrom(basejump,metrics)
 importFrom(basejump,plotGene)
 importFrom(basejump,printString)
-importFrom(basejump,readFileByExtension)
 importFrom(basejump,sampleNames)
 importFrom(basejump,theme_midnight)
 importFrom(basejump,upperCamel)
@@ -203,6 +202,7 @@ importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme)
 importFrom(magrittr,"%>%")
 importFrom(magrittr,set_names)
+importFrom(magrittr,set_rownames)
 importFrom(methods,"slot<-")
 importFrom(methods,as)
 importFrom(methods,coerce)
