Improve documentation and `sanitizeSeuratMarkers()` return

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -154,7 +154,9 @@ importFrom(basejump,plotGene)
 importFrom(basejump,printString)
 importFrom(basejump,sampleNames)
 importFrom(basejump,theme_midnight)
+importFrom(basejump,uniteInterestingGroups)
 importFrom(basejump,upperCamel)
+importFrom(bcbioSingleCell,filterCells)
 importFrom(bcbioSingleCell,sampleData)
 importFrom(cowplot,plot_grid)
 importFrom(dplyr,arrange)
