--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(readCellTypeMarkers)
 export(runZinbwave)
 export(sanitizeSeuratMarkers)
 export(topMarkers)
+exportClasses(SingleCellMarkers)
 exportMethods("colData<-")
 exportMethods("interestingGroups<-")
 exportMethods("metadata<-")
