Export `CellCycleMarkers` and `CellTypeMarkers` class

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,8 @@ export(readCellTypeMarkers)
 export(runZinbwave)
 export(sanitizeSeuratMarkers)
 export(topMarkers)
+exportClasses(CellCycleMarkers)
+exportClasses(CellTypeMarkers)
 exportClasses(SingleCellMarkers)
 exportMethods("colData<-")
 exportMethods("interestingGroups<-")
