--- a/NAMESPACE
+++ b/NAMESPACE
@@ -174,6 +174,7 @@ importFrom(dplyr,mutate_at)
 importFrom(dplyr,mutate_if)
 importFrom(dplyr,n)
 importFrom(dplyr,pull)
+importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(dplyr,slice)
 importFrom(dplyr,summarize)
