Import `session_info()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -226,6 +226,7 @@ importFrom(rlang,sym)
 importFrom(rlang,syms)
 importFrom(scales,percent)
 importFrom(scales,pretty_breaks)
+importFrom(sessioninfo,session_info)
 importFrom(stats,median)
 importFrom(stats,model.matrix)
 importFrom(stats,relevel)
