--- a/NAMESPACE
+++ b/NAMESPACE
@@ -70,6 +70,7 @@ exportMethods(rownames)
 exportMethods(runZinbwave)
 exportMethods(sampleData)
 exportMethods(sampleNames)
+exportMethods(show)
 importClassesFrom(Seurat,seurat)
 importClassesFrom(SingleCellExperiment,SingleCellExperiment)
 importFrom(BiocGenerics,"counts<-")
@@ -77,8 +78,10 @@ importFrom(BiocGenerics,cbind)
 importFrom(BiocGenerics,colnames)
 importFrom(BiocGenerics,counts)
 importFrom(BiocGenerics,do.call)
+importFrom(BiocGenerics,lapply)
 importFrom(BiocGenerics,plotPCA)
 importFrom(BiocGenerics,rownames)
+importFrom(BiocGenerics,sapply)
 importFrom(BiocParallel,"bpprogressbar<-")
 importFrom(BiocParallel,MulticoreParam)
 importFrom(BiocParallel,SerialParam)
@@ -97,6 +100,7 @@ importFrom(S4Vectors,complete.cases)
 importFrom(S4Vectors,mcols)
 importFrom(S4Vectors,metadata)
 importFrom(S4Vectors,na.omit)
+importFrom(S4Vectors,split)
 importFrom(Seurat,CreateSeuratObject)
 importFrom(Seurat,as.SingleCellExperiment)
 importFrom(SingleCellExperiment,reducedDims)
@@ -125,6 +129,7 @@ importFrom(assertive.types,assert_is_a_bool)
 importFrom(assertive.types,assert_is_a_number)
 importFrom(assertive.types,assert_is_a_string)
 importFrom(assertive.types,assert_is_all_of)
+importFrom(assertive.types,assert_is_an_integer)
 importFrom(assertive.types,assert_is_any_of)
 importFrom(assertive.types,assert_is_character)
 importFrom(assertive.types,assert_is_data.frame)
@@ -164,6 +169,7 @@ importFrom(basejump,upperCamel)
 importFrom(bcbioSingleCell,filterCells)
 importFrom(bcbioSingleCell,sampleData)
 importFrom(cowplot,plot_grid)
+importFrom(crayon,bold)
 importFrom(dplyr,arrange)
 importFrom(dplyr,desc)
 importFrom(dplyr,everything)
@@ -240,3 +246,4 @@ importFrom(utils,packageVersion)
 importFrom(zinbwave,glmWeightedF)
 importFrom(zinbwave,zinbFit)
 importFrom(zinbwave,zinbwave)
+importMethodsFrom(basejump,coerce)
