--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(plotViolin)
 export(readCellTypeMarkers)
 export(runZinbwave)
 export(sanitizeSeuratMarkers)
+export(show)
 export(topMarkers)
 exportClasses(CellCycleMarkers)
 exportClasses(CellTypeMarkers)
