--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,7 +23,6 @@ export(plotTSNE)
 export(plotTopMarkers)
 export(plotUMAP)
 export(plotViolin)
-export(readCellTypeMarkers)
 export(runZinbwave)
 export(sanitizeSeuratMarkers)
 export(show)
@@ -216,6 +215,7 @@ importFrom(ggplot2,scale_radius)
 importFrom(ggplot2,scale_x_continuous)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme)
+importFrom(googlesheets,gs_key)
 importFrom(magrittr,"%>%")
 importFrom(magrittr,set_names)
 importFrom(magrittr,set_rownames)
@@ -231,6 +231,7 @@ importFrom(methods,validObject)
 importFrom(pbapply,pblapply)
 importFrom(rlang,"!!!")
 importFrom(rlang,"!!")
+importFrom(rlang,":=")
 importFrom(rlang,sym)
 importFrom(rlang,syms)
 importFrom(scales,percent)
