--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(plotTSNE)
 export(plotTopMarkers)
 export(plotUMAP)
 export(plotViolin)
+export(readCellTypeMarkers)
 export(runZinbwave)
 export(sanitizeSeuratMarkers)
 export(show)
