--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,7 +29,7 @@ Depends:
     R (>= 3.5),
     SingleCellExperiment,
     basejump (>= 0.99.0),
-    bcbioSingleCell (>= 0.2.2)
+    bcbioSingleCell (>= 0.99.0)
 Imports:
     assertive.base,
     assertive.numbers,
@@ -65,7 +65,7 @@ Suggests:
     splatter,
     testthat (>= 2.0)
 Remotes:
-    hbc/bcbioSingleCell@develop,
+    hbc/bcbioSingleCell@bioconductor,
     steinbaugh/basejump@bioconductor
 biocViews:
     DataRepresentation,
