--- a/NAMESPACE
+++ b/NAMESPACE
@@ -124,6 +124,7 @@ importFrom(assertive.properties,assert_has_no_duplicates)
 importFrom(assertive.properties,assert_has_rows)
 importFrom(assertive.properties,assert_is_non_empty)
 importFrom(assertive.properties,assert_is_of_length)
+importFrom(assertive.properties,assert_is_scalar)
 importFrom(assertive.sets,assert_are_disjoint_sets)
 importFrom(assertive.sets,assert_are_intersecting_sets)
 importFrom(assertive.sets,assert_is_subset)
