--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,11 +10,13 @@ export(clusterID)
 export(diffExp)
 export(diffExpPerCluster)
 export(findMarkers)
+export(knownMarkers)
 export(knownMarkersDetected)
 export(plotCellTypesPerCluster)
 export(plotDot)
 export(plotFeature)
 export(plotGene)
+export(plotKnownMarkers)
 export(plotKnownMarkersDetected)
 export(plotMarker)
 export(plotPCElbow)
@@ -50,13 +52,14 @@ exportMethods(diffExpPerCluster)
 exportMethods(findMarkers)
 exportMethods(gene2symbol)
 exportMethods(interestingGroups)
+exportMethods(knownMarkers)
 exportMethods(metadata)
 exportMethods(metrics)
 exportMethods(plotCellTypesPerCluster)
 exportMethods(plotDot)
 exportMethods(plotFeature)
 exportMethods(plotGene)
-exportMethods(plotKnownMarkersDetected)
+exportMethods(plotKnownMarkers)
 exportMethods(plotMarker)
 exportMethods(plotPCA)
 exportMethods(plotPCElbow)
@@ -73,6 +76,7 @@ exportMethods(runZinbwave)
 exportMethods(sampleData)
 exportMethods(sampleNames)
 exportMethods(show)
+exportMethods(topMarkers)
 importClassesFrom(Seurat,seurat)
 importClassesFrom(SingleCellExperiment,SingleCellExperiment)
 importFrom(BiocGenerics,"counts<-")
@@ -145,12 +149,12 @@ importFrom(assertive.types,is_a_string)
 importFrom(basejump,"interestingGroups<-")
 importFrom(basejump,"sampleData<-")
 importFrom(basejump,assertHasRownames)
-importFrom(basejump,assertIsAHeaderLevel)
 importFrom(basejump,assertIsAStringOrNULL)
 importFrom(basejump,assertIsAnImplicitInteger)
 importFrom(basejump,assertIsColorScaleContinuousOrNULL)
 importFrom(basejump,assertIsColorScaleDiscreteOrNULL)
 importFrom(basejump,assertIsFillScaleDiscreteOrNULL)
+importFrom(basejump,assertIsHeaderLevel)
 importFrom(basejump,assertIsImplicitInteger)
 importFrom(basejump,camel)
 importFrom(basejump,coerce)
@@ -161,6 +165,7 @@ importFrom(basejump,interestingGroups)
 importFrom(basejump,mapGenesToRownames)
 importFrom(basejump,mapGenesToSymbols)
 importFrom(basejump,markdownHeader)
+importFrom(basejump,matchArgsToDoCall)
 importFrom(basejump,matchInterestingGroups)
 importFrom(basejump,metrics)
 importFrom(basejump,plotGene)
