--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,11 +10,13 @@ export(clusterID)
 export(diffExp)
 export(diffExpPerCluster)
 export(findMarkers)
+export(knownMarkers)
 export(knownMarkersDetected)
 export(plotCellTypesPerCluster)
 export(plotDot)
 export(plotFeature)
 export(plotGene)
+export(plotKnownMarkers)
 export(plotKnownMarkersDetected)
 export(plotMarker)
 export(plotPCElbow)
@@ -56,7 +58,7 @@ exportMethods(plotCellTypesPerCluster)
 exportMethods(plotDot)
 exportMethods(plotFeature)
 exportMethods(plotGene)
-exportMethods(plotKnownMarkersDetected)
+exportMethods(plotKnownMarkers)
 exportMethods(plotMarker)
 exportMethods(plotPCA)
 exportMethods(plotPCElbow)
@@ -73,6 +75,7 @@ exportMethods(runZinbwave)
 exportMethods(sampleData)
 exportMethods(sampleNames)
 exportMethods(show)
+exportMethods(topMarkers)
 importClassesFrom(Seurat,seurat)
 importClassesFrom(SingleCellExperiment,SingleCellExperiment)
 importFrom(BiocGenerics,"counts<-")
@@ -118,6 +121,7 @@ importFrom(SummarizedExperiment,rowRanges)
 importFrom(assertive.base,assert_all_are_not_na)
 importFrom(assertive.base,assert_are_identical)
 importFrom(assertive.numbers,assert_all_are_in_left_open_range)
+importFrom(assertive.numbers,assert_all_are_non_negative)
 importFrom(assertive.numbers,assert_all_are_positive)
 importFrom(assertive.properties,assert_has_names)
 importFrom(assertive.properties,assert_has_no_duplicates)
@@ -145,12 +149,13 @@ importFrom(assertive.types,is_a_string)
 importFrom(basejump,"interestingGroups<-")
 importFrom(basejump,"sampleData<-")
 importFrom(basejump,assertHasRownames)
-importFrom(basejump,assertIsAHeaderLevel)
 importFrom(basejump,assertIsAStringOrNULL)
+importFrom(basejump,assertIsAlpha)
 importFrom(basejump,assertIsAnImplicitInteger)
 importFrom(basejump,assertIsColorScaleContinuousOrNULL)
 importFrom(basejump,assertIsColorScaleDiscreteOrNULL)
 importFrom(basejump,assertIsFillScaleDiscreteOrNULL)
+importFrom(basejump,assertIsHeaderLevel)
 importFrom(basejump,assertIsImplicitInteger)
 importFrom(basejump,camel)
 importFrom(basejump,coerce)
@@ -161,6 +166,7 @@ importFrom(basejump,interestingGroups)
 importFrom(basejump,mapGenesToRownames)
 importFrom(basejump,mapGenesToSymbols)
 importFrom(basejump,markdownHeader)
+importFrom(basejump,matchArgsToDoCall)
 importFrom(basejump,matchInterestingGroups)
 importFrom(basejump,metrics)
 importFrom(basejump,plotGene)
