--- a/NAMESPACE
+++ b/NAMESPACE
@@ -122,6 +122,7 @@ importFrom(SummarizedExperiment,rowRanges)
 importFrom(assertive.base,assert_all_are_not_na)
 importFrom(assertive.base,assert_are_identical)
 importFrom(assertive.numbers,assert_all_are_in_left_open_range)
+importFrom(assertive.numbers,assert_all_are_in_open_range)
 importFrom(assertive.numbers,assert_all_are_non_negative)
 importFrom(assertive.numbers,assert_all_are_positive)
 importFrom(assertive.properties,assert_has_names)
