--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(show)
 export(topMarkers)
 exportClasses(CellCycleMarkers)
 exportClasses(CellTypeMarkers)
+exportClasses(KnownSeuratMarkers)
 exportClasses(SeuratMarkers)
 exportMethods("colData<-")
 exportMethods("interestingGroups<-")
@@ -41,6 +42,7 @@ exportMethods(assay)
 exportMethods(assayNames)
 exportMethods(assays)
 exportMethods(cellCountsPerCluster)
+exportMethods(cellTypesPerCluster)
 exportMethods(clusterCellCountsPerSample)
 exportMethods(clusterID)
 exportMethods(coerce)
@@ -53,6 +55,9 @@ exportMethods(findMarkers)
 exportMethods(gene2symbol)
 exportMethods(interestingGroups)
 exportMethods(knownMarkers)
+exportMethods(mapGenesToIDs)
+exportMethods(mapGenesToRownames)
+exportMethods(mapGenesToSymbols)
 exportMethods(metadata)
 exportMethods(metrics)
 exportMethods(plotCellTypesPerCluster)
@@ -165,6 +170,7 @@ importFrom(basejump,convertGenesToSymbols)
 importFrom(basejump,gene2symbol)
 importFrom(basejump,import)
 importFrom(basejump,interestingGroups)
+importFrom(basejump,mapGenesToIDs)
 importFrom(basejump,mapGenesToRownames)
 importFrom(basejump,mapGenesToSymbols)
 importFrom(basejump,markdownHeader)
