--- a/NAMESPACE
+++ b/NAMESPACE
@@ -179,12 +179,11 @@ importFrom(basejump,matchInterestingGroups)
 importFrom(basejump,metrics)
 importFrom(basejump,plotGene)
 importFrom(basejump,printString)
+importFrom(basejump,sampleData)
 importFrom(basejump,sampleNames)
 importFrom(basejump,theme_midnight)
 importFrom(basejump,uniteInterestingGroups)
 importFrom(basejump,upperCamel)
-importFrom(bcbioSingleCell,filterCells)
-importFrom(bcbioSingleCell,sampleData)
 importFrom(cowplot,plot_grid)
 importFrom(crayon,bold)
 importFrom(dplyr,arrange)
