--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ exportMethods("colData<-")
 exportMethods("interestingGroups<-")
 exportMethods("metadata<-")
 exportMethods("sampleData<-")
+exportMethods(Gene2Symbol)
 exportMethods(assay)
 exportMethods(assayNames)
 exportMethods(assays)
@@ -52,7 +53,6 @@ exportMethods(counts)
 exportMethods(diffExp)
 exportMethods(diffExpPerCluster)
 exportMethods(findMarkers)
-exportMethods(gene2symbol)
 exportMethods(interestingGroups)
 exportMethods(knownMarkers)
 exportMethods(mapGenesToIDs)
@@ -155,6 +155,7 @@ importFrom(assertive.types,assert_is_tbl_df)
 importFrom(assertive.types,is_a_string)
 importFrom(basejump,"interestingGroups<-")
 importFrom(basejump,"sampleData<-")
+importFrom(basejump,Gene2Symbol)
 importFrom(basejump,assertHasRownames)
 importFrom(basejump,assertIsAStringOrNULL)
 importFrom(basejump,assertIsAlpha)
