--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -75,3 +75,34 @@ biocViews:
     Visualization
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 6.1.0
+Collate: 
+    'AllClasses.R'
+    'AllGenerators.R'
+    'AllGenerics.R'
+    'as-methods.R'
+    'assert-internal.R'
+    'cellCountsPerCluster-methods.R'
+    'cellTypesPerCluster-methods.R'
+    'clusterCellCountsPerSample-methods.R'
+    'clusterID-methods.R'
+    'data.R'
+    'deprecated.R'
+    'diffExp-methods.R'
+    'diffExpPerCluster-methods.R'
+    'fetchData-internal.R'
+    'findMarkers-methods.R'
+    'general.R'
+    'globals.R'
+    'knownMarkers-methods.R'
+    'plotCellTypesPerCluster-methods.R'
+    'plotGene-methods.R'
+    'plotKnownMarkers-methods.R'
+    'plotMarker-methods.R'
+    'plotPCElbow-methods.R'
+    'plotReducedDim-methods.R'
+    'plotTopMarkers-methods.R'
+    'pointillism-package.R'
+    'runZinbwave-methods.R'
+    'seurat-SingleCellExperiment-methods.R'
+    'show-methods.R'
+    'topMarkers-methods.R'
