--- a/NAMESPACE
+++ b/NAMESPACE
@@ -256,6 +256,7 @@ importFrom(sessioninfo,session_info)
 importFrom(stats,median)
 importFrom(stats,model.matrix)
 importFrom(stats,relevel)
+importFrom(tibble,column_to_rownames)
 importFrom(tibble,remove_rownames)
 importFrom(tibble,tibble)
 importFrom(tidyr,gather)
