Improve formal consistency

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -92,12 +92,13 @@ Collate:
     'deprecated.R'
     'diffExp-methods.R'
     'diffExpPerCluster-methods.R'
+    'globals.R'
     'fetchData-internal.R'
     'findMarkers-methods.R'
     'general.R'
-    'globals.R'
     'knownMarkers-methods.R'
     'plotCellTypesPerCluster-methods.R'
+    'plotFeature-methods.R'
     'plotGene-methods.R'
     'plotKnownMarkers-methods.R'
     'plotMarker-methods.R'
