Improve assert check and don't attempt to camel sanitize

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -114,6 +114,7 @@ importFrom(S4Vectors,na.omit)
 importFrom(S4Vectors,split)
 importFrom(Seurat,Convert)
 importFrom(Seurat,CreateSeuratObject)
+importFrom(SingleCellExperiment,reducedDimNames)
 importFrom(SingleCellExperiment,reducedDims)
 importFrom(SummarizedExperiment,"assays<-")
 importFrom(SummarizedExperiment,"colData<-")
