--- a/NAMESPACE
+++ b/NAMESPACE
@@ -257,6 +257,7 @@ importFrom(sessioninfo,session_info)
 importFrom(stats,median)
 importFrom(stats,model.matrix)
 importFrom(stats,relevel)
+importFrom(tibble,as_tibble)
 importFrom(tibble,column_to_rownames)
 importFrom(tibble,remove_rownames)
 importFrom(tibble,tibble)
