--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ exportMethods("colData<-")
 exportMethods("interestingGroups<-")
 exportMethods("metadata<-")
 exportMethods("sampleData<-")
+exportMethods("weights<-")
 exportMethods(Gene2Symbol)
 exportMethods(assay)
 exportMethods(assayNames)
@@ -82,6 +83,7 @@ exportMethods(sampleData)
 exportMethods(sampleNames)
 exportMethods(show)
 exportMethods(topMarkers)
+exportMethods(weights)
 importClassesFrom(Seurat,seurat)
 importClassesFrom(SingleCellExperiment,SingleCellExperiment)
 importFrom(BiocGenerics,"counts<-")
@@ -114,8 +116,10 @@ importFrom(S4Vectors,na.omit)
 importFrom(S4Vectors,split)
 importFrom(Seurat,Convert)
 importFrom(Seurat,CreateSeuratObject)
+importFrom(SingleCellExperiment,"weights<-")
 importFrom(SingleCellExperiment,reducedDimNames)
 importFrom(SingleCellExperiment,reducedDims)
+importFrom(SingleCellExperiment,weights)
 importFrom(SummarizedExperiment,"assays<-")
 importFrom(SummarizedExperiment,"colData<-")
 importFrom(SummarizedExperiment,"rowRanges<-")
@@ -185,6 +189,7 @@ importFrom(basejump,sampleData)
 importFrom(basejump,sampleNames)
 importFrom(basejump,theme_midnight)
 importFrom(basejump,upperCamel)
+importFrom(bcbioSingleCell,filterCells)
 importFrom(cowplot,plot_grid)
 importFrom(crayon,bold)
 importFrom(dplyr,arrange)
@@ -248,6 +253,7 @@ importFrom(pbapply,pblapply)
 importFrom(rlang,"!!!")
 importFrom(rlang,"!!")
 importFrom(rlang,":=")
+importFrom(rlang,has_length)
 importFrom(rlang,sym)
 importFrom(rlang,syms)
 importFrom(scales,percent)
