--- a/NAMESPACE
+++ b/NAMESPACE
@@ -153,6 +153,7 @@ importFrom(assertive.types,assert_is_any_of)
 importFrom(assertive.types,assert_is_character)
 importFrom(assertive.types,assert_is_data.frame)
 importFrom(assertive.types,assert_is_factor)
+importFrom(assertive.types,assert_is_function)
 importFrom(assertive.types,assert_is_list)
 importFrom(assertive.types,assert_is_matrix)
 importFrom(assertive.types,assert_is_numeric)
