Update example data to extend Seurat::pbmc_small

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ exportClasses(SeuratMarkers)
 exportMethods("colData<-")
 exportMethods("interestingGroups<-")
 exportMethods("metadata<-")
+exportMethods("rowRanges<-")
 exportMethods("sampleData<-")
 exportMethods("weights<-")
 exportMethods(Gene2Symbol)
