--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,8 @@ export(clusterID)
 export(diffExp)
 export(diffExpPerCluster)
 export(findMarkers)
+export(importCellCycleMarkersFromGoogle)
+export(importCellTypeMarkersFromGoogle)
 export(knownMarkers)
 export(knownMarkersDetected)
 export(plotCellTypesPerCluster)
