Update NAMESPACE and DESCRIPTION

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -113,10 +113,12 @@ importFrom(S4Vectors,"metadata<-")
 importFrom(S4Vectors,as.data.frame)
 importFrom(S4Vectors,as.matrix)
 importFrom(S4Vectors,complete.cases)
+importFrom(S4Vectors,head)
 importFrom(S4Vectors,mcols)
 importFrom(S4Vectors,metadata)
 importFrom(S4Vectors,na.omit)
 importFrom(S4Vectors,split)
+importFrom(S4Vectors,tail)
 importFrom(Seurat,Convert)
 importFrom(Seurat,CreateSeuratObject)
 importFrom(SingleCellExperiment,"weights<-")
@@ -240,6 +242,7 @@ importFrom(ggplot2,scale_x_continuous)
 importFrom(ggplot2,scale_y_continuous)
 importFrom(ggplot2,theme)
 importFrom(googlesheets,gs_key)
+importFrom(googlesheets,gs_read)
 importFrom(magrittr,"%>%")
 importFrom(magrittr,set_names)
 importFrom(magrittr,set_rownames)
