Fixes to pass build checks

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -251,6 +251,7 @@ importFrom(methods,as)
 importFrom(methods,coerce)
 importFrom(methods,getMethod)
 importFrom(methods,is)
+importFrom(methods,new)
 importFrom(methods,setAs)
 importFrom(methods,show)
 importFrom(methods,slot)
