--- a/.Rbuildignore
+++ b/.Rbuildignore
@@ -1,13 +1,14 @@
 ^.*\.Rproj$
 ^.*\.gz$
+^.*\.pdf$
+^CONTRIBUTING\.md$
 ^\.Rprofile$
 ^\.Rproj\.user$
+^\.httr-oauth$
 ^\.lintr$
 ^\.travis\.yml$
 ^_pkgdown\.yml$
 ^appveyor\.yml$
-^CONTRIBUTING\.md$
 ^data-raw$
 ^docs$
 ^pkgdown$
-^\.httr-oauth$
