--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,8 @@
 
 export(CellCycleMarkers)
 export(CellTypeMarkers)
-export(SeuratMarkers)
+export(Markers)
+export(MarkersPerCluster)
 export(cellCountsPerCluster)
 export(cellTypesPerCluster)
 export(clusterCellCountsPerSample)
@@ -34,8 +35,9 @@ export(show)
 export(topMarkers)
 exportClasses(CellCycleMarkers)
 exportClasses(CellTypeMarkers)
-exportClasses(KnownSeuratMarkers)
-exportClasses(SeuratMarkers)
+exportClasses(KnownMarkers)
+exportClasses(Markers)
+exportClasses(MarkersPerCluster)
 exportMethods("colData<-")
 exportMethods("interestingGroups<-")
 exportMethods("metadata<-")
