--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,7 +30,7 @@ export(plotUMAP)
 export(plotViolin)
 export(readCellTypeMarkers)
 export(runZinbwave)
-export(sanitizeSeuratMarkers)
+export(sanitizeMarkers)
 export(show)
 export(topMarkers)
 exportClasses(CellCycleMarkers)
