--- a/NAMESPACE
+++ b/NAMESPACE
@@ -195,6 +195,7 @@ importFrom(basejump,plotGene)
 importFrom(basejump,printString)
 importFrom(basejump,sampleData)
 importFrom(basejump,sampleNames)
+importFrom(basejump,snake)
 importFrom(basejump,theme_midnight)
 importFrom(basejump,upperCamel)
 importFrom(cowplot,plot_grid)
